--- a/zookeeper/01_应用典型场景.md
+++ b/zookeeper/01_应用典型场景.md
@@ -12,7 +12,7 @@ KEY: 先练习基本DEMO/入门
    A：发送请求后对zk某个节点值注册监听器；
    B：处理后修改zk同节点值，A收到通知
 
-![](https://note.youdao.com/yws/api/personal/file/2081A15D3735458EAB95F57F517DDD73?method=download&shareKey=47e26c8302ddc0d1a801194e1727d8fd)
+![示意图](https://note.youdao.com/yws/api/personal/file/2081A15D3735458EAB95F57F517DDD73?method=download&shareKey=47e26c8302ddc0d1a801194e1727d8fd)
 
 
 #### 2、分布式锁
@@ -21,10 +21,11 @@ KEY: 先练习基本DEMO/入门
 - 方法：
    机器1：接收请求后先获取zk分布式锁（创建一个znode），再执           行操作；
    机器2：也尝试创建该node，创建失败等待，等待机器一执行完            毕后，再执行。
+![示意图](https://note.youdao.com/yws/api/personal/file/56E43B1A1EFE4CFA84B95FE19924E975?method=download&shareKey=d37d401a9a02fe2a5331650228fdeb3c)
 
 #### 3、 配置信息管理 
 zk可以做很多系统配置新的管理，如kafka，storm、dubbo
-
+![示意图](https://note.youdao.com/yws/api/personal/file/3B950612FA1C4055A2734904194B9B2B?method=download&shareKey=72bc33ba8700b88b76420d1aefa21250)
 
 #### 4、 HA高并发
 HDFS、YARN等大数据系统，基于zk开发HA高可用机制（主备，主挂后立马通过zk启动备））
