刷新场景4 HA高可用原理图
刷新场景4 HA高可用原理图

--- a/zookeeper/01_应用典型场景.md
+++ b/zookeeper/01_应用典型场景.md
@@ -2,6 +2,8 @@
 
 KEY: 先练习基本DEMO/入门
 
+来源：B站Java工程师面试突击宝典 41-1 说说zookeeper有哪些使用场景
+
 ## zk有哪些应用场景
 
 
@@ -27,6 +29,6 @@ KEY: 先练习基本DEMO/入门
 zk可以做很多系统配置新的管理，如kafka，storm、dubbo
 ![示意图](https://note.youdao.com/yws/api/personal/file/3B950612FA1C4055A2734904194B9B2B?method=download&shareKey=72bc33ba8700b88b76420d1aefa21250)
 
-#### 4、 HA高并发
+#### 4、 HA高可用
 HDFS、YARN等大数据系统，基于zk开发HA高可用机制（主备，主挂后立马通过zk启动备））
-
+![示意图](https://note.youdao.com/yws/api/personal/file/84FA5AB89A9C4B6982104D4A6882FF80?method=download&shareKey=463b6d89614f922c936490ffa7399c07)
